@@ -1,3 +1,9 @@
+2003-08-18  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/PJ_aea.c: fixed initialization of en variable.
+
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=380
+
 2003-06-27  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/pj_init.c: changed tokenizing in pj_init_plus() so that if
